--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <title>React setup</title>
 </head>
 <body>
-<div id="app" />
-<script src="../build/bundle.js" type="text/javascript"></script>
+<div id="app"></div>
+<script src="./build/bundle.js" type="text/javascript"></script>
 </body>
 </html>
