--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>React setup</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
 </head>
 <body>
 <div id="app"></div>
